# mlir-type-conversion

./: CMakeLists.txt  Lowering.cpp  Lowering.h  main.cpp
FooDialect/: CMakeLists.txt  FooDialect.cpp  FooDialect.h  FooDialect.td
